# Copyright 2023 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/assembly/board_input_bundle.gni")
import("//build/bazel/assembly/bazel_board_configuration.gni")
import("//build/info/info.gni")

assert(current_toolchain == default_toolchain,
       "The riscv64 board can only be defined in the default toolchain.")
assert(current_cpu == "riscv64",
       "The riscv64 board can only be defined in an riscv64 toolchain.")

bazel_board_configuration("riscv64") {
  testonly = true
  bazel_board_configuration_target = "//boards/riscv64"
  deps = [ ":riscv64.bazel_input" ]
}

group("riscv64.bazel_input") {
  testonly = true
  deps = [
    ":main_bundle.bazel_inputs",
    "//boards/emulation/virtio:virtio.bazel_inputs",
  ]
}

board_input_bundle("main_bundle") {
  configuration = {
    power_manager =
        "//src/power/power-manager/node_config/base_node_config.json5"
  }
  drivers = [
    {
      package_target = "//src/devices/bus/drivers/pci:bus-pci-package"
      package_set = "bootfs"
      driver_components = [ "meta/bus-pci.cm" ]
    },
    {
      package_target = "//src/devices/board/drivers/qemu-riscv64:package"
      package_set = "bootfs"
      driver_components = [ "meta/qemu-riscv64.cm" ]
    },
  ]
  version = build_info_version
}
