# Copyright 2025 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/assembly/board_configuration.gni")
import("//build/assembly/generated_partitions_config.gni")

generated_partitions_config("partitions_config") {
  testonly = true
  hw_revision = "test"
}

board_configuration("testing") {
  name = "test"
  testonly = true
  partitions_config = ":partitions_config"
  version = "fake_version"
}
