# Copyright 2025 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("@fuchsia_build_info//:args.bzl", "build_info_version")
load(
    "@rules_fuchsia//fuchsia:assembly.bzl",
    "fuchsia_board_configuration",
    "fuchsia_prebuilt_board_input_bundle",
    "fuchsia_prebuilt_board_input_bundle_set",
)

package(default_visibility = ["//visibility:public"])

_COMMON_FILESYSTEMS = {
    "vbmeta": {
        "key": "LABEL(//:third_party/android/platform/external/avb/test/data/testkey_atx_psk.pem)",
        "key_metadata": "LABEL(//:third_party/android/platform/external/avb/test/data/atx_metadata.bin)",
    },
    "fvm": {
        "blobfs": {
            "size_checker_maximum_bytes": 5216665600,
        },
        "sparse_output": {},
        "fastboot_output": {
            "truncate_to_length": 17179869184,
        },
    },
    "fxfs": {
        "size_checker_maximum_bytes": 5216665600,
    },
    "gpt": "allow_multiple",
    "watch_deprecated_v1_drivers": True,
}

_COMMON_PROVIDED_FEATURES = [
    # keep-sorted start
    "fuchsia::fake_battery",
    "fuchsia::fake_power_sensor",
    "fuchsia::input",
    "fuchsia::intel_hda",
    "fuchsia::paravirtualization",
    "fuchsia::paver",
    "fuchsia::pmm_checker_auto",
    "fuchsia::power",
    "fuchsia::pwm",
    "fuchsia::real_time_clock",
    "fuchsia::sdhci",
    "fuchsia::shared_registers",
    "fuchsia::ufs_pci",
    "fuchsia::usb_host",
    "fuchsia::usb_peripheral_support",
    "fuchsia::vulkan_gpu",
    "fuchsia::wlan_softmac",
    "fuchsia::xhci",

    # keep-sorted end
]

fuchsia_board_configuration(
    name = "x64",
    board_input_bundle_sets = [":x64_bibs"],
    board_input_bundles = [":paver"],
    board_name = "x64",
    filesystems = _COMMON_FILESYSTEMS,
    hardware_info = {
        "name": "default-board",
    },
    kernel = {
        "serial_mode": "legacy",
    },
    partitions_configuration = "//build/bazel/assembly/partitions_configurations:x64",
    provided_features = _COMMON_PROVIDED_FEATURES,
    version = build_info_version,
)

fuchsia_board_configuration(
    name = "reduced_perf_variation",
    board_input_bundle_sets = [":x64_bibs"],
    board_input_bundles = [
        ":paver",
        ":reduced_perf_variation_args",
    ],
    board_name = "x64",
    filesystems = _COMMON_FILESYSTEMS,
    hardware_info = {
        "name": "default-board",
    },
    kernel = {
        "serial_mode": "legacy",
        "quiet_early_boot": True,
    },
    partitions_configuration = "//build/bazel/assembly/partitions_configurations:x64",
    provided_features = _COMMON_PROVIDED_FEATURES,
    release_info_name = "x64_reduced_perf_variation",
    version = build_info_version,
)

fuchsia_prebuilt_board_input_bundle_set(
    name = "x64_bibs",
    files = "@gn_targets//boards/x64:x64_bibs",
)

fuchsia_prebuilt_board_input_bundle(
    name = "paver",
    files = "@gn_targets//boards/x64:paver",
)

fuchsia_prebuilt_board_input_bundle(
    name = "reduced_perf_variation_args",
    files = "@gn_targets//boards/x64:reduced_perf_variation_args",
)
