# Copyright 2022 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/bazel/bazel_build_action.gni")

assert(is_fuchsia,
       "Assembly Input Bundles can only be in the Fuchsia toolchain")

#  ________  _________  ________  ________
# |\   ____\|\___   ___\\   __  \|\   __  \
# \ \  \___|\|___ \  \_\ \  \|\  \ \  \|\  \
#  \ \_____  \   \ \  \ \ \  \\\  \ \   ____\
#   \|____|\  \   \ \  \ \ \  \\\  \ \  \___|
#     ____\_\  \   \ \__\ \ \_______\ \__\
#    |\_________\   \|__|  \|_______|\|__|
#    \|_________|
#
#
#  THE AIB TARGETS HAVE MOVED:  //bundles/assembly/BUILD.bazel
#
#  They are now being constructed by Bazel, and are copied back from the Bazel
#  outdir for the assembled_system() targets that still need them.
#
#  There are a set of bridge targets for inputs in //bundles/assembly/bazel_inputs.
#
#  See //bundles/assembly/README.md for more information.
#

# All of the platform assembly input bundles.
group("assembly") {
  testonly = true
  deps = [ ":platform" ]

  # Coverage, profile and sanitizer builders rename the shared libs, therefore
  # ignore them. RISCV skips some artifacts, therefore we also ignore that.
  if (!is_coverage && !is_profile && !is_asan && !is_hwasan && !is_heapdump &&
      current_cpu != "riscv64") {
    deps += [ "//bundles/assembly/scrutiny" ]
  }
  metadata = {
    # Only include the full set of platform artifacts in platform_artifacts.json
    platform_artifacts_barrier = [ ":platform" ]
  }
}

# Construct the 'bringup' platform artifacts set
bazel_build_action("bringup") {
  testonly = true
  bazel_config = "fuchsia_platform"
  bazel_target = "//bundles/assembly:bringup"
  deps = [
    # The AIB Bazel inputs
    "//bundles/assembly/bazel_inputs:bringup_inputs",
  ]
  directory_outputs = [
    {
      bazel_dir = "{{BAZEL_TARGET_OUT_PATH}}"
      ninja_dir = "bringup"
      tracked_files = [ "platform_artifacts/platform_artifacts.json" ]
    },
  ]
}

# Construct the main platform artifacts set
bazel_build_action("platform") {
  testonly = true
  bazel_config = "fuchsia_platform"
  bazel_target = "//bundles/assembly:platform"
  deps = [
    # The AIB Bazel inputs
    "//bundles/assembly/bazel_inputs:platform_inputs",
  ]
  directory_outputs = [
    {
      bazel_dir = "{{BAZEL_TARGET_OUT_PATH}}"
      ninja_dir = "platform"
      tracked_files = [ "platform_artifacts/platform_artifacts.json" ]
    },
  ]
  metadata = {
    package_barrier = []
    platform_artifacts = [
      {
        name = target_cpu
        path = rebase_path("${target_out_dir}/platform/platform_artifacts",
                           root_build_dir)
        label = get_label_info(target_name, "label_no_toolchain")
      },
    ]
  }
}
