# Copyright 2022 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/icu/config.gni")  # icu_git_info
import("platform_aibs.bzl")

foreach(base_name, icu_platform_aib_base_names) {
  platform_aib_names += [
    "${base_name}.icu_default_${icu_git_info.default}",
    "${base_name}.icu_latest_${icu_git_info.latest}",
  ]
}

bringup_platform_aib_labels = []
foreach(name, bringup_platform_aib_names) {
  bringup_platform_aib_labels += [ "//bundles/assembly:${name}" ]
}

platform_aib_labels = []
foreach(name, platform_aib_names) {
  platform_aib_labels += [ "//bundles/assembly:${name}" ]
}
