# Copyright 2020 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

assert(is_fuchsia, "These can only be defined in the default toolchain")

group("boot_tests") {
  testonly = true

  deps = [
    "//sdk/lib/c:boot_tests",
    "//src/bringup/lib:boot_tests",
    "//src/lib:boot_tests",
    "//zircon/kernel:boot_tests",
    "//zircon/system/utest/core:boot_tests",

    # These were in //src/bringup/tests:bootfs-tests, but they
    # e2e-like tests that run bringup.zbi in an emulator, and
    # aren't bootfs-based tests:
    "//src/bringup/tests:emulator_tests",
  ]
}
