# Copyright 2026 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

assert(current_toolchain == default_toolchain,
       "These can only be defined in the default toolchain")

# A dedicated bundle for the docs_roller bot to reach the wide subset of targets
# without inducing print output or warnings that pollute stdout and break JSON
# parsing.
group("docs_roller") {
  testonly = true
  public_deps = [
    "//examples",
    "//src:tests_no_e2e",
    "//src/camera",
    "//src/graphics/examples",
    "//src/lib/ui/carnelian:examples",
    "//src/media/bundles:examples",
    "//src/media/bundles:services",
  ]
}
