# Copyright 2026 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/components.gni")
import("//build/rust/rustc_library.gni")

rustc_library("rcu_examples_lib") {
  edition = "2024"
  with_unit_tests = true

  sources = [
    "src/lib.rs",
    "src/rcu_arc_example.rs",
    "src/rcu_hash_map_example.rs",
  ]

  deps = [
    "//src/lib/fuchsia-rcu",
    "//src/starnix/lib/starnix_rcu",
  ]
}

fuchsia_unittest_package("rcu_examples_tests") {
  deps = [ ":rcu_examples_lib_test" ]
}

group("hermetic_tests") {
  testonly = true
  deps = [ ":rcu_examples_tests" ]
}
