# Copyright 2026 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("@fuchsia_build_info//:args.bzl", "build_info_version")
load(
    "@rules_fuchsia//fuchsia:assembly.bzl",
    "fuchsia_product",
    "fuchsia_product_bundle",
    "fuchsia_product_configuration",
)
load(
    "//build/bazel/rules/assembly:product_configuration.bzl",
    internal_product_configuration = "product_configuration",
)
load(
    "//build/bazel/rules/packages:prebuilt_package.bzl",
    "prebuilt_package",
)
load(
    ":platform_config.bzl",
    "PLATFORM_CONFIG_BASE_JSON",
    "PLATFORM_CONFIG_WITH_TEST_JSON",
)

package(
    default_applicable_licenses = ["//:license"],
    default_visibility = ["//visibility:public"],
)

fuchsia_product_configuration(
    name = "product_config",
    product_config_json = {
        "platform": PLATFORM_CONFIG_BASE_JSON,
    },
    version = build_info_version,
)

internal_product_configuration(
    name = "product_config_with_tests",
    bootfs_files_package = ":bootfs_test_files_package",
    product_config_json = {
        "platform": PLATFORM_CONFIG_WITH_TEST_JSON,
    },
    version = build_info_version,
)

prebuilt_package(
    name = "bootfs_test_files_package",
    archive = "@gn_targets//products/bringup:bootfs_test_files_package",
)

###
# x64

fuchsia_product(
    name = "image.x64",
    board_config = "//boards:x64",
    platform_artifacts = "//build/bazel/assembly/assembly_input_bundles:platform_bringup",
    product_config = ":product_config",
)

fuchsia_product_bundle(
    name = "product_bundle.x64",
    main = ":image.x64",
    product_bundle_name = "bringup.x64",
    recovery = "//products/zedboot:x64",
)

fuchsia_product(
    name = "image_with_tests.x64",
    board_config = "//boards:x64",
    platform_artifacts = "//build/bazel/assembly/assembly_input_bundles:platform_bringup",
    product_config = ":product_config_with_tests",
)

fuchsia_product_bundle(
    name = "product_bundle_with_tests.x64",
    main = ":image_with_tests.x64",
    product_bundle_name = "bringup_with_tests.x64",
    recovery = "//products/zedboot:x64",
    virtual_devices = [
        "//build/bazel/assembly/virtual_devices:x64-emu-recommended",
        "//build/bazel/assembly/virtual_devices:x64-emu-min",
        "//build/bazel/assembly/virtual_devices:x64-emu-extra-large",
    ],
)

###
# arm64

fuchsia_product(
    name = "image.arm64",
    board_config = "//boards:arm64",
    platform_artifacts = "//build/bazel/assembly/assembly_input_bundles:platform_bringup",
    product_config = ":product_config",
)

fuchsia_product_bundle(
    name = "product_bundle.arm64",
    main = ":image.arm64",
    product_bundle_name = "bringup.arm64",
    recovery = "//products/zedboot:arm64",
)

fuchsia_product(
    name = "image_with_tests.arm64",
    board_config = "//boards:arm64",
    platform_artifacts = "//build/bazel/assembly/assembly_input_bundles:platform_bringup",
    product_config = ":product_config_with_tests",
)

fuchsia_product_bundle(
    name = "product_bundle_with_tests.arm64",
    main = ":image_with_tests.arm64",
    product_bundle_name = "bringup_with_tests.arm64",
    recovery = "//products/zedboot:arm64",
    virtual_devices = [
        "//build/bazel/assembly/virtual_devices:arm64-emu-recommended",
        "//build/bazel/assembly/virtual_devices:arm64-emu-min",
        "//build/bazel/assembly/virtual_devices:arm64-emu-extra-large",
    ],
)

###
# qemu-arm64

fuchsia_product(
    name = "image.qemu-arm64",
    board_config = "//boards:qemu-arm64",
    platform_artifacts = "//build/bazel/assembly/assembly_input_bundles:platform_bringup",
    product_config = ":product_config",
)

fuchsia_product_bundle(
    name = "product_bundle.qemu-arm64",
    main = ":image.qemu-arm64",
    product_bundle_name = "bringup.qemu-arm64",
    recovery = "//products/zedboot:qemu-arm64",
)

fuchsia_product(
    name = "image_with_tests.qemu-arm64",
    board_config = "//boards:qemu-arm64",
    platform_artifacts = "//build/bazel/assembly/assembly_input_bundles:platform_bringup",
    product_config = ":product_config_with_tests",
)

fuchsia_product_bundle(
    name = "product_bundle_with_tests.qemu-arm64",
    main = ":image_with_tests.qemu-arm64",
    product_bundle_name = "bringup_with_tests.qemu-arm64",
    recovery = "//products/zedboot:qemu-arm64",
    virtual_devices = [
        "//build/bazel/assembly/virtual_devices:arm64-emu-recommended",
        "//build/bazel/assembly/virtual_devices:arm64-emu-min",
        "//build/bazel/assembly/virtual_devices:arm64-emu-extra-large",
    ],
)

###
# vim3

fuchsia_product(
    name = "image.vim3",
    board_config = "//boards:vim3",
    platform_artifacts = "//build/bazel/assembly/assembly_input_bundles:platform_bringup",
    product_config = ":product_config",
)

fuchsia_product_bundle(
    name = "product_bundle.vim3",
    main = ":image.vim3",
    product_bundle_name = "bringup.vim3",
    recovery = "//products/zedboot:vim3_recovery",
)

fuchsia_product(
    name = "image_with_tests.vim3",
    board_config = "//boards:vim3",
    platform_artifacts = "//build/bazel/assembly/assembly_input_bundles:platform_bringup",
    product_config = ":product_config_with_tests",
)

fuchsia_product_bundle(
    name = "product_bundle_with_tests.vim3",
    main = ":image_with_tests.vim3",
    product_bundle_name = "bringup_with_tests.vim3",
    recovery = "//products/zedboot:vim3_recovery",
)

###
# riscv64

fuchsia_product(
    name = "image.riscv64",
    board_config = "//boards:riscv64",
    platform_artifacts = "//build/bazel/assembly/assembly_input_bundles:platform_bringup",
    product_config = ":product_config",
)

fuchsia_product_bundle(
    name = "product_bundle.riscv64",
    main = ":image.riscv64",
    product_bundle_name = "bringup.riscv64",
    recovery = "//products/zedboot:riscv64",
)

fuchsia_product(
    name = "image_with_tests.riscv64",
    board_config = "//boards:riscv64",
    platform_artifacts = "//build/bazel/assembly/assembly_input_bundles:platform_bringup",
    product_config = ":product_config_with_tests",
)

fuchsia_product_bundle(
    name = "product_bundle_with_tests.riscv64",
    main = ":image_with_tests.riscv64",
    product_bundle_name = "bringup_with_tests.riscv64",
    recovery = "//products/zedboot:riscv64",
    virtual_devices = [
        "//build/bazel/assembly/virtual_devices:riscv64-emu-recommended",
        "//build/bazel/assembly/virtual_devices:riscv64-emu-min",
        "//build/bazel/assembly/virtual_devices:riscv64-emu-extra-large",
    ],
)
