# Copyright 2024 The Fuchsia Authors.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/bazel/assembly/bazel_product_bundle.gni")
import("//build/bazel/export_fuchsia_package_to_bazel.gni")
import("//build/components/fuchsia_package.gni")
import("//products/bringup/bringup_args.gni")

group("bringup") {
  testonly = true
  deps = []
  if (current_cpu == "x64") {
    deps += [
      ":product_bundle.x64",
      ":product_bundle_with_tests.x64",
    ]
  } else if (current_cpu == "arm64") {
    deps += [
      ":product_bundle.arm64",
      ":product_bundle_with_tests.arm64",
    ]
  } else if (current_cpu == "riscv64") {
    deps += [
      ":product_bundle.riscv64",
      ":product_bundle_with_tests.riscv64",
    ]
  }
}

fuchsia_package("bootfs_test_files_package") {
  testonly = true
  deps = [
    # This leads to all the individual bootfs_test() targets.
    "//src/bringup/tests:bootfs-tests",

    # Add the testrunner.
    "//src/testing/runtests",
  ]
}

export_fuchsia_package_to_bazel("bootfs_test_files_package_export") {
  testonly = true
  package = ":bootfs_test_files_package"
}

if (current_cpu == "x64") {
  bazel_product_bundle("product_bundle.x64") {
    product_bundle_name = "bringup.x64"
    bazel_product_bundle_target = ":product_bundle.x64"
    bazel_product_image_target = ":image.x64"
    bazel_product_config_target = ":product_config"
    bazel_product_config_name = "bringup"
    bazel_recovery_image_target = "//products/zedboot:x64"
    bazel_inputs_from_gn =
        bringup_bazel_inputs + [ "//boards/x64:x64.bazel_input" ]

    # Note: this is last so that local variables cannot mask anything set in
    # that scope, so that this scope only contains truly common parameters.
    forward_variables_from(bazel_product_bundle_params, "*")
  }

  bazel_product_bundle("product_bundle_with_tests.x64") {
    product_bundle_name = "bringup_with_tests.x64"
    bazel_product_bundle_target = ":product_bundle_with_tests.x64"
    bazel_product_image_target = ":image_with_tests.x64"
    bazel_product_config_target = ":product_config_with_tests"
    bazel_product_config_name = "bringup_with_tests"
    bazel_recovery_image_target = "//products/zedboot:x64"
    bazel_inputs_from_gn =
        bringup_with_tests_bazel_inputs + [ "//boards/x64:x64.bazel_input" ]

    # Note: this is last so that local variables cannot mask anything set in
    # that scope, so that this scope only contains truly common parameters.
    forward_variables_from(bazel_product_bundle_params, "*")
  }
}

if (current_cpu == "arm64") {
  bazel_product_bundle("product_bundle.arm64") {
    testonly = true
    product_bundle_name = "bringup.arm64"
    bazel_product_bundle_target = ":product_bundle.arm64"
    bazel_product_image_target = ":image.arm64"
    bazel_product_config_target = ":product_config"
    bazel_product_config_name = "bringup"
    bazel_recovery_image_target = "//products/zedboot:arm64"
    bazel_inputs_from_gn =
        bringup_bazel_inputs + [ "//boards/arm64:arm64.bazel_input" ]

    # Note: this is last so that local variables cannot mask anything set in
    # that scope, so that this scope only contains truly common parameters.
    forward_variables_from(bazel_product_bundle_params, "*")
  }

  bazel_product_bundle("product_bundle_with_tests.arm64") {
    testonly = true
    product_bundle_name = "bringup_with_tests.arm64"
    bazel_product_bundle_target = ":product_bundle_with_tests.arm64"
    bazel_product_image_target = ":image_with_tests.arm64"
    bazel_product_config_target = ":product_config_with_tests"
    bazel_product_config_name = "bringup_with_tests"
    bazel_recovery_image_target = "//products/zedboot:arm64"
    bazel_inputs_from_gn =
        bringup_with_tests_bazel_inputs + [ "//boards/arm64:arm64.bazel_input" ]

    # Note: this is last so that local variables cannot mask anything set in
    # that scope, so that this scope only contains truly common parameters.
    forward_variables_from(bazel_product_bundle_params, "*")
  }

  bazel_product_bundle("product_bundle.qemu-arm64") {
    testonly = true
    product_bundle_name = "bringup.qemu-arm64"
    bazel_product_bundle_target = ":product_bundle.qemu-arm64"
    bazel_product_image_target = ":image.qemu-arm64"
    bazel_product_config_target = ":product_config"
    bazel_product_config_name = "bringup"
    bazel_recovery_image_target = "//products/zedboot:qemu-arm64"
    bazel_inputs_from_gn =
        bringup_bazel_inputs + [ "//boards/qemu-arm64:qemu-arm64.bazel_input" ]
    image_use_vbmeta = false

    # Note: this is last so that local variables cannot mask anything set in
    # that scope, so that this scope only contains truly common parameters.
    forward_variables_from(bazel_product_bundle_params, "*")
  }

  bazel_product_bundle("product_bundle_with_tests.qemu-arm64") {
    testonly = true
    product_bundle_name = "bringup_with_tests.qemu-arm64"
    bazel_product_bundle_target = ":product_bundle_with_tests.qemu-arm64"
    bazel_product_image_target = ":image_with_tests.qemu-arm64"
    bazel_product_config_target = ":product_config_with_tests"
    bazel_product_config_name = "bringup_with_tests"
    bazel_recovery_image_target = "//products/zedboot:qemu-arm64"
    bazel_inputs_from_gn = bringup_with_tests_bazel_inputs +
                           [ "//boards/qemu-arm64:qemu-arm64.bazel_input" ]
    image_use_vbmeta = false

    # Note: this is last so that local variables cannot mask anything set in
    # that scope, so that this scope only contains truly common parameters.
    forward_variables_from(bazel_product_bundle_params, "*")
  }

  bazel_product_bundle("product_bundle.vim3") {
    product_bundle_name = "bringup.vim3"
    bazel_product_bundle_target = ":product_bundle.vim3"
    bazel_product_image_target = ":image.vim3"
    bazel_product_config_target = ":product_config"
    bazel_product_config_name = "bringup"
    bazel_recovery_image_target = "//products/zedboot:vim3_recovery"
    bazel_inputs_from_gn =
        bringup_bazel_inputs + [ "//boards/vim3:bazel_inputs" ]

    # Note: this is last so that local variables cannot mask anything set in
    # that scope, so that this scope only contains truly common parameters.
    forward_variables_from(bazel_product_bundle_params, "*")
  }

  bazel_product_bundle("product_bundle_with_tests.vim3") {
    product_bundle_name = "bringup_with_tests.vim3"
    bazel_product_bundle_target = ":product_bundle_with_tests.vim3"
    bazel_product_image_target = ":image_with_tests.vim3"
    bazel_product_config_target = ":product_config_with_tests"
    bazel_product_config_name = "bringup_with_tests"
    bazel_recovery_image_target = "//products/zedboot:vim3_recovery"
    bazel_inputs_from_gn =
        bringup_with_tests_bazel_inputs + [ "//boards/vim3:bazel_inputs" ]

    # Note: this is last so that local variables cannot mask anything set in
    # that scope, so that this scope only contains truly common parameters.
    forward_variables_from(bazel_product_bundle_params, "*")
  }
}

if (current_cpu == "riscv64") {
  bazel_product_bundle("product_bundle.riscv64") {
    product_bundle_name = "bringup.riscv64"
    bazel_product_bundle_target = ":product_bundle.riscv64"
    bazel_product_image_target = ":image.riscv64"
    bazel_product_config_target = ":product_config"
    bazel_product_config_name = "bringup"
    bazel_recovery_image_target = "//products/zedboot:riscv64"
    bazel_inputs_from_gn =
        bringup_bazel_inputs + [ "//boards/riscv64:riscv64.bazel_input" ]
    image_use_vbmeta = false

    # Note: this is last so that local variables cannot mask anything set in
    # that scope, so that this scope only contains truly common parameters.
    forward_variables_from(bazel_product_bundle_params, "*")
  }

  bazel_product_bundle("product_bundle_with_tests.riscv64") {
    product_bundle_name = "bringup_with_tests.riscv64"
    bazel_product_bundle_target = ":product_bundle_with_tests.riscv64"
    bazel_product_image_target = ":image_with_tests.riscv64"
    bazel_product_config_target = ":product_config_with_tests"
    bazel_product_config_name = "bringup_with_tests"
    bazel_recovery_image_target = "//products/zedboot:riscv64"
    bazel_inputs_from_gn = bringup_with_tests_bazel_inputs +
                           [ "//boards/riscv64:riscv64.bazel_input" ]
    image_use_vbmeta = false

    # Note: this is last so that local variables cannot mask anything set in
    # that scope, so that this scope only contains truly common parameters.
    forward_variables_from(bazel_product_bundle_params, "*")
  }
}
