# Copyright 2026 The Fuchsia Authors.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Common params for all bazel_product_bundle() template instances for bringup
# products
bazel_product_bundle_params = {
  testonly = true
  use_bringup_platform_bundles = true
  image_has_fxfs_blob = false
  image_has_fvm = false
}

bringup_bazel_inputs = []

bringup_with_tests_bazel_inputs = [
  # The assembly config tool used by internal (non-sdk) Bazel targets.
  "//build/assembly/tools/assembly_config:bazel_input($host_toolchain)",

  # The bootfs_files_package of bootfs test binaries
  "//products/bringup:bootfs_test_files_package_export($default_toolchain)",
]
